# stacky

./: .gitignore  BUILD.bazel  LICENSE.txt  README.md  WORKSPACE  adding_new_file  pyproject.toml  requirements.in  requirements_lock.txt  setup.py  stacky  tox.ini
.github/: dependabot.yml
.github/workflows/: after_master_push.yml  ci.yml  release.yml
src/stacky/: __init__.py  stacky.py  stacky_test.py
