load("@rules_xar//:xarify.bzl", "py_binary_xar")
load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirements")
load("@pypi//:requirements.bzl", "requirement")

py_binary_xar(
    name = "stacky.xar",
    main = ":stacky",
)


py_binary(
    name = "stacky",
    srcs = ["src/stacky/stacky.py"],
    main = "src/stacky/stacky.py",
    deps = [
        requirement("ansicolors"),
        requirement("simple-term-menu"),
        requirement("asciitree"),
    ]
)

exports_files(["requirements.txt"])

# Update dependencies with:
# bazel run //:requirements.update
compile_pip_requirements(
    name = "requirements",
    requirements_txt = "requirements_lock.txt",
)
